--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,7 @@
     <string name="Discount">Discount</string>
     <string name="add_location">Add your location</string>
     <string name="current_location">Current location</string>
+    <string name="neutral">Neutral</string>
 
 
 </resources>
